<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/relative_layout_padding">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="@dimen/thumbnail_width"
        android:layout_height="@dimen/thumbnail_height"
        android:layout_marginEnd="@dimen/thumbnail_margin_end"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/thumbnail"
        android:textColor="@android:color/black"
        android:textAppearance="?android:textAppearanceSmall"
        tools:text="@string/title_placeholder" />

    <TextView
        android:id="@+id/section"
        style="@style/section_date_time_author_styling"
        android:layout_toEndOf="@id/thumbnail"
        android:layout_below="@id/title"
        tools:text="@string/section_placeholder" />

    <TextView
        android:id="@+id/time"
        style="@style/section_date_time_author_styling"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/title"
        android:layout_marginStart="@dimen/time_margin_start"
        tools:text="@string/time_placeholder" />

    <TextView
        android:id="@+id/date"
        style="@style/section_date_time_author_styling"
        android:layout_toStartOf="@id/time"
        android:layout_below="@id/title"
        tools:text="@string/date_placeholder" />

    <TextView
        android:id="@+id/authors"
        style="@style/section_date_time_author_styling"
        android:layout_below="@id/time"
        android:layout_alignParentEnd="true"
        tools:text="@string/author_placeholder"/>
</RelativeLayout>